--- a/styles/components/location.scss
+++ b/styles/components/location.scss
@@ -6,6 +6,13 @@
     h2{
       color: $red;
       font-size: $type_2;
+      font-family: 'Grouch';
+    }
+    p{
+      font-family: 'GTSpectra';
+      font-size: $type_3;
+      line-height: $line_3;
+      color: $black;
     }
   }
 }
